--- a/deliverables/pike/debtcollector.yaml
+++ b/deliverables/pike/debtcollector.yaml
@@ -1,34 +1,35 @@
 ---
+branches:
+  - location: 1.17.0
+    name: stable/pike
 include-pypi-link: yes
 launchpad: debtcollector
 release-model: cycle-with-intermediary
+release-notes: https://docs.openstack.org/releasenotes/debtcollector/pike.html
+releases:
+  - projects:
+      - hash: f7630fadb8582e7dd37b02565b104681891defdd
+        repo: openstack/debtcollector
+    version: 1.12.0
+  - projects:
+      - hash: 154472d821917370892a8bf8b856da73570d1c99
+        repo: openstack/debtcollector
+    version: 1.13.0
+  - projects:
+      - hash: da416d64e219ff75f82b2fd29b5709112a6b43eb
+        repo: openstack/debtcollector
+    version: 1.14.0
+  - projects:
+      - hash: d2f3f45ceb6dcf5b753e53ef8e1441efd09c2c93
+        repo: openstack/debtcollector
+    version: 1.15.0
+  - projects:
+      - hash: 9d3fbc726fb4bb5699bb6eec2dfeb51cc0e762f0
+        repo: openstack/debtcollector
+    version: 1.16.0
+  - projects:
+      - hash: cd6ba6b1224e527c36e976a25c0e06d311ebb2d9
+        repo: openstack/debtcollector
+    version: 1.17.0
 team: oslo
 type: library
-releases:
-  - version: 1.12.0
-    projects:
-      - repo: openstack/debtcollector
-        hash: f7630fadb8582e7dd37b02565b104681891defdd
-  - version: 1.13.0
-    projects:
-      - repo: openstack/debtcollector
-        hash: 154472d821917370892a8bf8b856da73570d1c99
-  - version: 1.14.0
-    projects:
-      - repo: openstack/debtcollector
-        hash: da416d64e219ff75f82b2fd29b5709112a6b43eb
-  - version: 1.15.0
-    projects:
-      - repo: openstack/debtcollector
-        hash: d2f3f45ceb6dcf5b753e53ef8e1441efd09c2c93
-  - version: 1.16.0
-    projects:
-      - repo: openstack/debtcollector
-        hash: 9d3fbc726fb4bb5699bb6eec2dfeb51cc0e762f0
-  - version: 1.17.0
-    projects:
-      - repo: openstack/debtcollector
-        hash: cd6ba6b1224e527c36e976a25c0e06d311ebb2d9
-branches:
-  - name: stable/pike
-    location: 1.17.0
