--- a/deliverables/pike/keystoneauth.yaml
+++ b/deliverables/pike/keystoneauth.yaml
@@ -1,40 +1,41 @@
 ---
-include-pypi-link: true
+branches:
+  - location: 3.1.0
+    name: stable/pike
+include-pypi-link: yes
 launchpad: keystoneauth
 release-model: cycle-with-intermediary
+release-notes: https://docs.openstack.org/releasenotes/keystoneauth/pike.html
+releases:
+  - projects:
+      - hash: fdc454c154fddb415492669b3a1339f8286e2129
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 2.19.0
+  - projects:
+      - hash: 6cbd95bb8dd3cf1ec110f6e66ee743d5d8507fbc
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 2.20.0
+  - projects:
+      - hash: 0be140389bcbb2df44840af921ea8cb4f1a231d5
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 2.21.0
+  - projects:
+      - hash: 353b9260428e7d7c83134e1d74b50d8610e86188
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 3.0.0
+  - projects:
+      - hash: ccbd20ed9c15ced50d1c996d5b6971b97b2c7a78
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 3.0.1
+  - projects:
+      - hash: 81363eca7903c2dc01d39b4c1569a6750ff13502
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 3.1.0
 team: keystone
 type: library
-releases:
-  - version: 2.19.0
-    projects:
-      - repo: openstack/keystoneauth
-        hash: fdc454c154fddb415492669b3a1339f8286e2129
-        tarball-base: keystoneauth1
-  - version: 2.20.0
-    projects:
-      - repo: openstack/keystoneauth
-        hash: 6cbd95bb8dd3cf1ec110f6e66ee743d5d8507fbc
-        tarball-base: keystoneauth1
-  - version: 2.21.0
-    projects:
-      - repo: openstack/keystoneauth
-        hash: 0be140389bcbb2df44840af921ea8cb4f1a231d5
-        tarball-base: keystoneauth1
-  - version: 3.0.0
-    projects:
-      - repo: openstack/keystoneauth
-        hash: 353b9260428e7d7c83134e1d74b50d8610e86188
-        tarball-base: keystoneauth1
-  - version: 3.0.1
-    projects:
-      - repo: openstack/keystoneauth
-        hash: ccbd20ed9c15ced50d1c996d5b6971b97b2c7a78
-        tarball-base: keystoneauth1
-  - version: 3.1.0
-    projects:
-      - repo: openstack/keystoneauth
-        hash: 81363eca7903c2dc01d39b4c1569a6750ff13502
-        tarball-base: keystoneauth1
-branches:
-  - name: stable/pike
-    location: 3.1.0
