--- a/deliverables/pike/os-service-types.yaml
+++ b/deliverables/pike/os-service-types.yaml
@@ -1,15 +1,15 @@
 ---
-include-pypi-link: yes
-storyboard: 904
-release-notes: https://docs.openstack.org/releasenotes/os-service-types/unreleased.html
-team: os-service-types
-release-model: cycle-with-intermediary
-type: library
-releases:
-  - version: 1.0.0
-    projects:
-      - repo: openstack/os-service-types
-        hash: 06fcdd8e73f83ff6cebabf23b24bc124bc6e8fcf
 branches:
-  - name: stable/pike
-    location: 1.0.0
+  - location: 1.0.0
+    name: stable/pike
+include-pypi-link: yes
+release-model: cycle-with-intermediary
+release-notes: https://docs.openstack.org/releasenotes/os-service-types/pike.html
+releases:
+  - projects:
+      - hash: 06fcdd8e73f83ff6cebabf23b24bc124bc6e8fcf
+        repo: openstack/os-service-types
+    version: 1.0.0
+storyboard: 904
+team: os-service-types
+type: library
