--- a/deliverables/pike/python-keystoneclient.yaml
+++ b/deliverables/pike/python-keystoneclient.yaml
@@ -1,22 +1,23 @@
 ---
+branches:
+  - location: 3.13.0
+    name: stable/pike
 include-pypi-link: yes
 launchpad: python-keystoneclient
 release-model: cycle-with-intermediary
+release-notes: https://docs.openstack.org/releasenotes/python-keystoneclient/pike.html
+releases:
+  - projects:
+      - hash: daa99ed5fe1df548c26feff68b45bda7ac94ea25
+        repo: openstack/python-keystoneclient
+    version: 3.11.0
+  - projects:
+      - hash: 937f4d62be338d0208c698ed85d377dc4ce137be
+        repo: openstack/python-keystoneclient
+    version: 3.12.0
+  - projects:
+      - hash: a8de72a1a2875e7ccf494b1827747c4bc7008b27
+        repo: openstack/python-keystoneclient
+    version: 3.13.0
 team: keystone
 type: library
-releases:
-  - version: 3.11.0
-    projects:
-      - repo: openstack/python-keystoneclient
-        hash: daa99ed5fe1df548c26feff68b45bda7ac94ea25
-  - version: 3.12.0
-    projects:
-      - repo: openstack/python-keystoneclient
-        hash: 937f4d62be338d0208c698ed85d377dc4ce137be
-  - version: 3.13.0
-    projects:
-      - repo: openstack/python-keystoneclient
-        hash: a8de72a1a2875e7ccf494b1827747c4bc7008b27
-branches:
-  - name: stable/pike
-    location: 3.13.0
