--- a/deliverables/pike/python-vitrageclient.yaml
+++ b/deliverables/pike/python-vitrageclient.yaml
@@ -1,19 +1,19 @@
 ---
-include-pypi-link: true
+branches:
+  - location: 1.3.0
+    name: stable/pike
+include-pypi-link: yes
 launchpad: python-vitrageclient
 release-model: cycle-with-intermediary
+release-notes: https://docs.openstack.org/releasenotes/python-vitrageclient/pike.html
+releases:
+  - projects:
+      - hash: 52995bbdfe77af42d95b54eb40361ac418c39d64
+        repo: openstack/python-vitrageclient
+    version: 1.2.0
+  - projects:
+      - hash: 8560fc5f5197964e17534d7bd08e9f9503dbb6f9
+        repo: openstack/python-vitrageclient
+    version: 1.3.0
 team: vitrage
 type: library
-release-notes: https://docs.openstack.org/releasenotes/python-vitrageclient/unreleased.html
-branches:
-  - name: stable/pike
-    location: 1.3.0
-releases:
-  - version: 1.2.0
-    projects:
-      - repo: openstack/python-vitrageclient
-        hash: 52995bbdfe77af42d95b54eb40361ac418c39d64
-  - version: 1.3.0
-    projects:
-      - repo: openstack/python-vitrageclient
-        hash: 8560fc5f5197964e17534d7bd08e9f9503dbb6f9
