--- a/deliverables/pike/oslo.policy.yaml
+++ b/deliverables/pike/oslo.policy.yaml
@@ -43,5 +43,9 @@ releases:
       - hash: 864042c23edad75d26c918bcb23d9f6da3127dcd
         repo: openstack/oslo.policy
     version: 1.25.0
+  - projects:
+      - hash: 94c7504b11113365d28c7f7cff1d6bd6d315e588
+        repo: openstack/oslo.policy
+    version: 1.25.1
 team: oslo
 type: library
