make openstack_requirements cycle-with-intermediary
Change-Id: I06dd208100afcd95fcf5b29d7ee6682edc7ce657
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/pike/requirements.yaml
+++ b/deliverables/pike/requirements.yaml
@@ -3,12 +3,8 @@ launchpad: openstack-requirements
 team: requirements
 type: other
 include-pypi-link: yes
+release-model: cycle-with-intermediary
 releases:
-  - version: 1.0.0
-    projects:
-      - repo: openstack/requirements
-        hash: 495027bda42431678845f40f084191623c7b2755
-        tarball-base: openstack_requirements
   - version: 1.1.0
     projects:
       - repo: openstack/requirements
