--- a/deliverables/pike/python-barbicanclient.yaml
+++ b/deliverables/pike/python-barbicanclient.yaml
@@ -20,3 +20,7 @@ releases:
     projects:
       - repo: openstack/python-barbicanclient
         hash: 49505b9aec05ec42e0a809ec51935c2324d5f3a6
+  - version: 4.5.2
+    projects:
+      - repo: openstack/python-barbicanclient
+        hash: 714fce222816ad3348d4ba4c3baaa721308158e2
