--- a/deliverables/pike/paunch.yaml
+++ b/deliverables/pike/paunch.yaml
@@ -24,3 +24,7 @@ releases:
     projects:
       - repo: openstack/paunch
         hash: 039f2c9c0298e4f2b58cb8bf97d60fac45b7829d
+  - version: 1.5.0
+    projects:
+      - repo: openstack/paunch
+        hash: d11e04548e43c0ad099910cfacdb02d43e8a3a7c
